--- a/start01.html
+++ b/start01.html
@@ -9,5 +9,9 @@
 <body>
     <center><hr><h1>🐻‍❄️ 웹사이트 제작 실습 🐻‍❄️</h1><hr></center>
     <img src="https://cdn.redpp.co.kr/news/photo/202103/697_3208_2937.jpg" alt="귀여운 북극곰" width="450px" height="520px">
+    <table>
+        <tr><td>웹사이트 제작</td></tr>
+        <tr><td>공부해보자</td></tr>
+    </table>
 </body>
 </html>
