포트폴리오 작성

--- a/project/project01.html
+++ b/project/project01.html
@@ -51,11 +51,9 @@
     <hr/>
     <center><h1>🌐2021-2022 활동🌐</h1></center>
     <hr/>
-
     <div id="content">
     <section class = "aside">
         <h1>김유진</h1>
-        <hr>
         <img src = "이미지.jpg"  style=" display:block;" width="100">
         <b>학력</b>
         <table border="1">
@@ -94,6 +92,15 @@
     </li>
 </aside>
 </div>
-
+<hr>
+<div id="footer">
+<h2>학교 활동</h2>
+<p>-1학년 1학기 학생회장</p>
+<p>-1학년 1학기 교과우수상(국어,수학,사회,한국사,직업,일본어,가정)</p>
+<p>-1학년 1학기 선행상</p>
+<p>-1학년 2학기 교과우수상(한국사,사회,직업,일본어,가정,정보처리와 관리, 컴퓨터그래픽)</p>
+<p>-1학년 2학기 한전KPS(주) KPS-패러데이 스쿨 장학증서</p>
+<p>-2학년 2학기 학생회장</p>
+</div>
 </body>
 </html>
