navigation Language & Study 추가

--- a/project/project01.html
+++ b/project/project01.html
@@ -51,6 +51,19 @@
     <hr/>
     <center><h1>🌐2021-2022 활동🌐</h1></center>
     <hr/>
+    <div id="navigation"><h2>Language & Study</h2></div>
+    <h3>Language</h3>
+    <p>🔹html5 🔹css3 🔹javascript 🔹java 🔹c 🔹java 🔹kotlin</p>
+    <h3>Study</h3>
+    <p>모던 웹을 위한 HTML5 + CSS3 바이블 3판 공부 </p>
+    <p>모던 자바스크립트Deep dive 활용 JS 공부 </p>
+    <p>자바의 정석 : 자바 공부 (+ naver카페 가입)</p>
+    <p> - 구름에듀 (cospro2급 - > c언어) 자격증 공부</p>
+    <p> - 프로그래머스 : 기초적인 자바 문제(코딩 테스트) </p>
+    <p> - 앨리스 : 자바 학습 및 예제 공부</p> 
+    <p> - 주말 study 그룹 -> 자바 언어 스터티 그룹 형성</p>
+    <p> - CA 동아리 코딩 클리닉 반 - DB 데이터베이스 배움 </p>
+    <hr>
     <div id="content">
     <section class = "aside">
         <h1>김유진</h1>
@@ -100,7 +113,8 @@
 <p>-1학년 1학기 선행상</p>
 <p>-1학년 2학기 교과우수상(한국사,사회,직업,일본어,가정,정보처리와 관리, 컴퓨터그래픽)</p>
 <p>-1학년 2학기 한전KPS(주) KPS-패러데이 스쿨 장학증서</p>
-<p>-2학년 2학기 학생회장</p>
+<p>-2학년 1학기 학생회장</p>
+<p>-2학년 2학기 일본 글로벌 인턴쉽</p>
 </div>
 </body>
 </html>
