--- a/project/project01.html
+++ b/project/project01.html
@@ -45,6 +45,9 @@
            overflow: hidden;
        }
 
+       #color {
+        background-color: #FFD2D7;
+       }
     </style>
 </head>
 <body>
@@ -53,7 +56,9 @@
     <hr/>
     <div id="navigation"><h2>Language & Study</h2></div>
     <h3>Language</h3>
+    <div id="color">
     <p>🔹html5 🔹css3 🔹javascript 🔹java 🔹c 🔹java 🔹kotlin</p>
+    </div>
     <h3>Study</h3>
     <p>모던 웹을 위한 HTML5 + CSS3 바이블 3판 공부 </p>
     <p>모던 자바스크립트Deep dive 활용 JS 공부 </p>
