--- a/testProject/start01.html
+++ b/testProject/start01.html
@@ -13,5 +13,6 @@
         <tr><td>웹사이트 제작</td></tr>
         <tr><td>공부해보자</td></tr>
     </table>
+    <script src="test01.js"></script>
 </body>
 </html>
