--- a/Java-script/2022_05_27.html
+++ b/Java-script/2022_05_27.html
@@ -1,5 +1,5 @@
 <script>
-    
+
 //     //함수 선언문
 //     function sayHi(){
 //         alert("Hello");
@@ -70,6 +70,57 @@
 // }
 // let res = sum4(1,2);
 // alert(res); 
+
+//객체 기본
+//'객체 생성자' 문법
+let uer = new Object();
+
+//객체 '리터널' 문법(중괄호 이용)
+//객체를 선언할 땐 주로 객체 리터널 방법을 사용 
+let user = {};
+
+//객체 리터널 문법으로 객체 생성
+let user2 = {
+    //키 : name , 값 : "John"
+    name : "John",
+    //키 : age, 값 : 18
+    age : 18
+};
+
+alert(user2.name);
+alert(user2.age);
+
+// //age 프로퍼티 삭제
+// delete user2.age;
+// alert(user2.age);
+
+//반환값이 필요한 경우
+let result = delete user.age;
+console.log(result); //true
+
+//Math 객체의 PI상수는 삭제 불가
+// alert(delete Math.PI); //fase 
+
+//스페이스나 하이픈(-)과 같은 기호를 조합해서 프로퍼티 이름을 만들어야 할 경우, 프로퍼티 이름을 따옴표로 감싸야 함
+let user3 = {
+    name : "youjin",
+    age : 18,
+    "likes birds": true
+};
+
+//상수(const) => 상수에는 새로운 값의 대입이 불가능하다 
+const user4 = {
+    name : "youjin"
+};
+//객체를 통해 접근하여 객체의 속성값을 수정하는 것은 가능함
+user4.name = "Pete";
+
+let user5 = {
+    name :"youjin",
+    age : 18
+};
+let key = prompt('사용자의 어떤 정보를 얻고 싶으신가요?',"name");
+alert(user5[key]);
 
 
 </script>
