--- a/Java-script/2022_05_27.html
+++ b/Java-script/2022_05_27.html
@@ -73,123 +73,176 @@
 
 //객체 기본
 //'객체 생성자' 문법
-let uer = new Object();
+// let uer = new Object();
 
-//객체 '리터널' 문법(중괄호 이용)
-//객체를 선언할 땐 주로 객체 리터널 방법을 사용 
-let user = {};
+// //객체 '리터널' 문법(중괄호 이용)
+// //객체를 선언할 땐 주로 객체 리터널 방법을 사용 
+// let user = {};
 
-//객체 리터널 문법으로 객체 생성
-let user2 = {
-    //키 : name , 값 : "John"
-    name : "John",
-    //키 : age, 값 : 18
-    age : 18
-};
+// //객체 리터널 문법으로 객체 생성
+// let user2 = {
+//     //키 : name , 값 : "John"
+//     name : "John",
+//     //키 : age, 값 : 18
+//     age : 18
+// };
 
-alert(user2.name);
-alert(user2.age);
-
-// //age 프로퍼티 삭제
-// delete user2.age;
+// alert(user2.name);
 // alert(user2.age);
 
-//반환값이 필요한 경우
-let result = delete user.age;
-console.log(result); //true
+// // //age 프로퍼티 삭제
+// // delete user2.age;
+// // alert(user2.age);
 
-//Math 객체의 PI상수는 삭제 불가
-// alert(delete Math.PI); //fase 
+// //반환값이 필요한 경우
+// let result = delete user.age;
+// console.log(result); //true
 
-//스페이스나 하이픈(-)과 같은 기호를 조합해서 프로퍼티 이름을 만들어야 할 경우, 프로퍼티 이름을 따옴표로 감싸야 함
-let user3 = {
-    name : "youjin",
+// //Math 객체의 PI상수는 삭제 불가
+// // alert(delete Math.PI); //fase 
+
+// //스페이스나 하이픈(-)과 같은 기호를 조합해서 프로퍼티 이름을 만들어야 할 경우, 프로퍼티 이름을 따옴표로 감싸야 함
+// let user3 = {
+//     name : "youjin",
+//     age : 18,
+//     "likes birds": true
+// };
+
+// //상수(const) => 상수에는 새로운 값의 대입이 불가능하다 
+// const user4 = {
+//     name : "youjin"
+// };
+// //객체를 통해 접근하여 객체의 속성값을 수정하는 것은 가능함
+// user4.name = "Pete";
+
+// let user5 = {
+//     name :"youjin",
+//     age : 18
+// };
+// let key = prompt('사용자의 어떤 정보를 얻고 싶으신가요?',"name");
+// alert(user5[key]);
+
+// //값 단축 구문 사용
+// let name = "John";
+// let age = 20;
+
+// //값 단축 구문없이 객체 정의
+// let user6 = {
+//     name : name,
+//     age : age
+// }
+// alert(user6);
+
+// //변수와 속성 이름이 같을 경우 다음과 같이 축약하여 객체 정의 가능
+// user7 = {
+//     //name : name과 같은 의미
+//     name,
+//     //age : age와 같은 의미
+//     age
+// }
+// alert(user7);
+
+// function makeUser(name,age){
+//     return {name : age};
+// }
+// let usermake = makeUser("김유진", 18);
+// alert(usermake);
+
+// //프로퍼티 이름의 제약사항
+// //예약어를 키로 사용해도 무방
+// let Obj = {
+//     for : 1,
+//     let : 2,
+//     return : 3
+// };
+// alert(Obj.for+Obj.let+Obj.return);
+
+// let obj2 = {
+//     0 : "test"
+// };
+// alert(obj2[0]);
+// alert(obj2["0"])
+
+// //in 연산자를 사용한 속성 존재 여부 확인 
+// let user8 = {};
+
+// alert(user8.noSuchProperty == undefined);
+
+// let user9 ={
+//     name : "John"
+// };
+// //name 속성이 존재하므로 true출력
+// alert("name" in user9);
+// // alert("noSuchOroperty" in user); false
+
+// let user10 = {
+//     name : "김유진"
+// };
+// alert("name" in user10); //ture
+// alert(user.name === undefined); //name속성은 존재하지만 undefiend이므로 true출력
+
+// //for... in 반복문
+// // 모든 키를 순회할 수 있다. 
+// let user11 = {
+//     name : "youjin",
+//     age : 18,
+//     isAdmin : true
+// };
+// for(let key in user11){
+//     alert(key + ":" + user11[key]);
+// }
+
+// //메서도와 this
+// let user12 = {
+//     name : "john",
+//     age : 18
+// };
+
+// //sayHi 속성(키)에 함수 할당( => 메소드 정의 )
+// user12.sayHi2 = function(){ // user12의 sayHi()메소드를 의미 
+//     alert("안녕하세요!");
+// }
+// //메소드 호출
+// user12.sayHi2();
+
+// let user13 = {
+//     //속성 정의하며 곧바로 메소드 정의
+//     sayHi3 : function(){
+//         alert("Hello");
+//     }
+// };
+
+let user14 = {
+    sayHi(){
+        alert("Hello");
+    }
+}
+
+//메서드와 this
+let user15 = {
+    name : "John",
     age : 18,
-    "likes birds": true
+    sayHi5() {
+        alert(this.name);
+    }
 };
+user15.sayHi5();
 
-//상수(const) => 상수에는 새로운 값의 대입이 불가능하다 
-const user4 = {
-    name : "youjin"
-};
-//객체를 통해 접근하여 객체의 속성값을 수정하는 것은 가능함
-user4.name = "Pete";
+//자유로운 this
+let user16 = {name : "John"};
+let admin = {name : "Admin"};
 
-let user5 = {
-    name :"youjin",
-    age : 18
-};
-let key = prompt('사용자의 어떤 정보를 얻고 싶으신가요?',"name");
-alert(user5[key]);
-
-//값 단축 구문 사용
-let name = "John";
-let age = 20;
-
-//값 단축 구문없이 객체 정의
-let user6 = {
-    name : name,
-    age : age
+function sayHi6(){
+    alert(this.name);
 }
-alert(user6);
+user.f = sayHi6;
+admin.f = sayHi6;
 
-//변수와 속성 이름이 같을 경우 다음과 같이 축약하여 객체 정의 가능
-user7 = {
-    //name : name과 같은 의미
-    name,
-    //age : age와 같은 의미
-    age
-}
-alert(user7);
+//this값은 기본적으로 "메소드 호출 시점에 점(.) 앞 객체"를 참조
+user16.f(); //"John"출력 (메서드 호출 시점에 점 앞의 객체는 user16따라서 this는 user16)
+admin.f(); //"Admin"출력
+//대괄호를 통해서도 메소드 접근 가능
+admin['f']();
 
-function makeUser(name,age){
-    return {name : age};
-}
-let usermake = makeUser("김유진", 18);
-alert(usermake);
-
-//프로퍼티 이름의 제약사항
-//예약어를 키로 사용해도 무방
-let Obj = {
-    for : 1,
-    let : 2,
-    return : 3
-};
-alert(Obj.for+Obj.let+Obj.return);
-
-let obj2 = {
-    0 : "test"
-};
-alert(obj2[0]);
-alert(obj2["0"])
-
-//in 연산자를 사용한 속성 존재 여부 확인 
-let user8 = {};
-
-alert(user8.noSuchProperty == undefined);
-
-let user9 ={
-    name : "John"
-};
-//name 속성이 존재하므로 true출력
-alert("name" in user9);
-// alert("noSuchOroperty" in user); false
-
-let user10 = {
-    name : "김유진"
-};
-alert("name" in user10); //ture
-alert(user.name === undefined); //name속성은 존재하지만 undefiend이므로 true출력
-
-//for... in 반복문
-// 모든 키를 순회할 수 있다. 
-let user11 = {
-    name : "youjin",
-    age : 18,
-    isAdmin : true
-};
-for(let key in user11){
-    alert(key + ":" + user11[key]);
-}
 
 </script>
