--- a/Java-script/2022_05_27.html
+++ b/Java-script/2022_05_27.html
@@ -212,37 +212,66 @@
 //     }
 // };
 
-let user14 = {
-    sayHi(){
-        alert("Hello");
-    }
+// let user14 = {
+//     sayHi(){
+//         alert("Hello");
+//     }
+// }
+
+// //메서드와 this
+// let user15 = {
+//     name : "John",
+//     age : 18,
+//     sayHi5() {
+//         alert(this.name);
+//     }
+// };
+// user15.sayHi5();
+
+// //자유로운 this
+// let user16 = {name : "John"};
+// let admin = {name : "Admin"};
+
+// function sayHi6(){
+//     alert(this.name);
+// }
+// user.f = sayHi6;
+// admin.f = sayHi6;
+
+// //this값은 기본적으로 "메소드 호출 시점에 점(.) 앞 객체"를 참조
+// user16.f(); //"John"출력 (메서드 호출 시점에 점 앞의 객체는 user16따라서 this는 user16)
+// admin.f(); //"Admin"출력
+// //대괄호를 통해서도 메소드 접근 가능
+// admin['f']();
+
+//new 연산자와 생성자 함수
+//생성자 함수
+/*
+1. 함수 이름의 "첫 글자는 대문자"로 시작
+2. 함수를 호출하면 "new 연산자"를 붙여서 호출 
+*/
+function User(name){
+    this.name = name;
+    this.isAdmin = false;
 }
+//new연산자와 함께 함수 호출
+let user17 = new User("Jack");
+alert(user17.name); //Jack
+alert(user17.isAdmin); //false
 
-//메서드와 this
-let user15 = {
-    name : "John",
-    age : 18,
-    sayHi5() {
-        alert(this.name);
-    }
-};
-user15.sayHi5();
+//생성자에서 메서드 추가 기능
+function user2(name) {
+    this.name = name;
 
-//자유로운 this
-let user16 = {name : "John"};
-let admin = {name : "Admin"};
-
-function sayHi6(){
-    alert(this.name);
+    //생성자에서 메서드 추가
+    this.sayHi = function(){
+        alert("My name is : "+ this.name);
+    };
 }
-user.f = sayHi6;
-admin.f = sayHi6;
+let john = new user2("John");
+//My name is John
+john.sayHi();
 
-//this값은 기본적으로 "메소드 호출 시점에 점(.) 앞 객체"를 참조
-user16.f(); //"John"출력 (메서드 호출 시점에 점 앞의 객체는 user16따라서 this는 user16)
-admin.f(); //"Admin"출력
-//대괄호를 통해서도 메소드 접근 가능
-admin['f']();
-
-
+let sam = new User("Sam");
+alert(john.sayHi === sam.sayHi);
 </script>
