--- a/Java-script/2022_05_27.html
+++ b/Java-script/2022_05_27.html
@@ -255,23 +255,163 @@ function User(name){
     this.isAdmin = false;
 }
 //new연산자와 함께 함수 호출
-let user17 = new User("Jack");
-alert(user17.name); //Jack
-alert(user17.isAdmin); //false
+// let user17 = new User("Jack");
+// alert(user17.name); //Jack
+// alert(user17.isAdmin); //false
 
-//생성자에서 메서드 추가 기능
-function user2(name) {
-    this.name = name;
+// //생성자에서 메서드 추가 기능
+// function user2(name) {
+//     this.name = name;
 
-    //생성자에서 메서드 추가
-    this.sayHi = function(){
-        alert("My name is : "+ this.name);
-    };
+//     //생성자에서 메서드 추가
+//     this.sayHi = function(){
+//         alert("My name is : "+ this.name);
+//     };
+// }
+// let john = new user2("John");
+// //My name is John
+// john.sayHi();
+
+// let sam = new User("Sam");
+// alert(john.sayHi === sam.sayHi);
+
+//문자열
+let single = "작은따옴표";
+let double = "큰따옴표";
+
+//베열
+let arr= new Array();
+let arr2=[];
+
+let fruits = ["사과","오렌지","자두"];
+alert(fruits[0]);
+alert(fruits[1]);
+alert(fruits[2]);
+
+fruits[2] = '배';
+fruits[3] = '레몬';
+
+let arr3 = ['사과',{name : '이보라'},true, function() {alert('안녕하세요!');}];
+alert(arr3[1].name) //이보라
+alert(arr3[3]()); //안녕하세요
+
+let fruits2 = [
+    "사과",
+    "오렌지",
+    "자두"
+];
+
+//pop, push ,shirf, unshift
+//pop : 배열의 맨 뒷 요소를 제거하며 반환
+let r = ['사과','오렌지','배'];
+alert(r.pop()); //배열에서 '배'를 제거하고 제거된 요소를 얼럿창에 띄운다.
+alert(r);
+
+//push : 배열의 맨 뒤에 요소를 추가
+r2.push("배");
+alert(r2);
+
+//shift: 배열의 맨 앞 요소를 제거하며 반환
+alert(r2.shitf());
+alert(r2); //오렌지, 배
+
+//unshift : 배열의 맨 앞 요소를 추가
+r2.unshift('사과');
+alert(r2);
+
+let arr14 = [];
+
+arr14.push(4,5,6);
+alert(arr14);
+
+arr14.unshift(1,2,3);
+console.log(arr);
+
+let f = ['바나나'];
+let ar = f;
+
+alert(ar == f);
+
+ar.push("배");
+alert(f);
+
+let arr15 = [1,2,3,4,5];
+
+//요소 2개만 남기고 자르기
+arr15.length = 2;
+alert(arr);
+//본래 길이로 되돌리기
+arr15.length = 5;
+alert(arr[3]);
+arr15.length = 0;
+
+function isEqualArray(arr1,arr2){
+    if(arr1 == arr2){
+        return true;
+    }
+    if(arr1.length !== arr2.length){
+        return false;
+    }
+    let eq = true;
+    for(let i = 0; i < arr1.length; i++){
+        if(arr1[i] == arr2[i]){
+            eq = false;
+            break;
+        }
+    }
+    return eq;
 }
-let john = new user2("John");
-//My name is John
-john.sayHi();
 
-let sam = new User("Sam");
-alert(john.sayHi === sam.sayHi);
-</script>
+let arr16 =[1,2,3];
+
+//요소 추가 제거 메서드
+arr.push(items) //맨 끝에 요소 추가
+arr.pop() //맨 뒤에 요소 제거
+arr.shift() //맨 앞 요소 제거
+arr.unshift(items) //맨 앞 요소 추가
+
+splice메소드
+//배열의 요소 추가,삭제, 교체 작업 
+let x = ['I','study',"JavaScript"];
+x.splice(1,1); //I,JavaScript
+
+let x2 = ["I","study","JavaScript","right",'now'];
+//처음 0 세번째 3 요소를 지운 후 이 자리를 다른 요소로 대처한다. 
+arr.splice(0,3,"Let's","danc3");
+
+let removed = x2.splice(0,2);
+alert(removed);//Let's study
+
+//slice메서드
+let q = ['t','e','s','t'];
+//start인데스부터 end인덱스까지의 요소를 복사한 후 새로운 배열 반환
+alert(q.slice(1,3))// e,s 
+alert(s.slice(-2)); //s,t
+alert(-4,-2); //t,e
+
+let p = ['t','e','s','t'];
+let copied = p.slice();
+alert(copied);
+
+//concat
+let w = [1,2];
+let c1 = w.concat([3,4]);
+alert(w); //1,2
+alert(c1); //1,2,3,4
+
+alert(w.concat([3,4],[5,6])); //1,2,3,4,5,6
+alert(arr.concat([3,4],5,6));
+
+//ForEach로 반복작업
+arr.forEach(function(item,index,array){
+    //요소를 무언가를 할 수 있다.
+});
+
+['d','c','e'].forEach(alert);
+
+['d','c','e'].forEach((item,index,array) => {
+    alert(`${item} is index ${index} in ${array});
+});
+
+
+ </script>
