--- a/movie/HtmlPage.html
+++ b/movie/HtmlPage.html
@@ -6,22 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="StyleSheet.css">
     <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#main_navigation a').click(function() {
+                let target = $(this).attr('data-target');
+    
+                $(':not([data-name=' + target + ']').removeClass('active');
+                $('[data-name =' + target + ']').addClass('active');
+            });
+        });
+    </script>
     <title>🎬 Cruella 🎬</title>
-
 </head>
 
 <body>
     <hgroup id="title">
-
+        <h1 data-name="information">information</h1>
+        <h1 data-name="character">character</h1>
+        <h1 data-name="multimedia">multimedia</h1>
     </hgroup>
     <section id="container">
+        <div id="main" data-name="main">
 
+        </div>
+        <div id="information" data-name="information">
+
+        </div>
+        <div id="character" data-name="character">
+
+        </div>
+        <div id="multimedia" data-name="multimedia">
+
+        </div>
     </section>
     <nav id="main_navigation">
         <ul>
-            <li><a href="#">Movie Info</a></li>
-            <li><a href="#">Multimedia</a></li>
-            <li><a href="#">Character</a></li>
+            <li><a href="#" data-target="information">Movie Info</a></li>
+            <li><a href="#" data-target="character">Multimedia</a></li>
+            <li><a href="#" data-target="multimedia">Character</a></li>
             <li><a href="#">Download</a></li>
         </ul>
     </nav>
