크루엘라 영화 추천 페이지

--- a/movie/HtmlPage.html
+++ b/movie/HtmlPage.html
@@ -26,17 +26,19 @@
         <h1 data-name="multimedia">multimedia</h1>
     </hgroup>
     <section id="container">
-        <div id="main" data-name="main">
-
+        <div id="main" data-name="main" class="active">
+            <img src="Images/dd.jpg" />
         </div>
         <div id="information" data-name="information">
-
+            <p>101마리의 달마시안 개의 스핀오프격 실사 영화. 크루엘라 드 빌의 젊은 시절을 다루며 배경을 70년대 후반으로 옮겼다.</p>
+            <p>말레피센트 시리즈 이후 기존 애니메이션 주인공이 아닌 디즈니 빌런을 메인으로 내세운 두 번째 실사영화이다.</p>
         </div>
         <div id="character" data-name="character">
 
         </div>
         <div id="multimedia" data-name="multimedia">
-
+            <video src="https://youtu.be/yfSMTFzw-Kw" width="940" height="480" controls = "controls"></video>
+            <video src=""></video>
         </div>
     </section>
     <nav id="main_navigation">
