영화 캐릭터 생성 중 1단계

--- a/movie/HtmlPage.html
+++ b/movie/HtmlPage.html
@@ -34,7 +34,22 @@
             <p>말레피센트 시리즈 이후 기존 애니메이션 주인공이 아닌 디즈니 빌런을 메인으로 내세운 두 번째 실사영화이다.</p>
         </div>
         <div id="character" data-name="character">
+            <a href="#">Left Button</a>
+            <a href="#">Right Button</a>
 
+            <article class="show">
+                <h1>Cruella</h1>
+                <img src="Images/person.jpg" />
+                <p>크루엘라 주인공</p>
+            </article>
+            <article>
+                <h1>바로네스</h1>
+                <img src="Images/char2.jpg" />
+            </article>
+            <article>
+                <h1>아티</h1>
+                <img src="Images/char3.jpg" />
+            </article>
         </div>
         <div id="multimedia" data-name="multimedia">
             <video src="https://youtu.be/yfSMTFzw-Kw" width="940" height="480" controls = "controls"></video>
