공모전 현황 업그러이드

--- a/project/project01.html
+++ b/project/project01.html
@@ -106,6 +106,9 @@
         <ul>
             <li>2022 YIP 청소년 발명가프로그램</li>
             <li>2022 STAC</li>
+            <li>Ip Meister 아이디어</li>
+            <li>2022 창의 아이디어 경진대회</li>
+            <li>AI Genius 대회</li>
         </ul>
     </li>
 </aside>
@@ -119,6 +122,7 @@
 <p>-1학년 2학기 교과우수상(한국사,사회,직업,일본어,가정,정보처리와 관리, 컴퓨터그래픽)</p>
 <p>-1학년 2학기 한전KPS(주) KPS-패러데이 스쿨 장학증서</p>
 <p>-2학년 1학기 학생회장</p>
+<p>-2학년 1학기 관악구 모범 학생 표창장 </p>
 <p>-2학년 2학기 일본 글로벌 인턴쉽</p>
 </div>
 </body>
