--- a/testProject/start01.html
+++ b/testProject/start01.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🐻‍❄️ 웹사이트 제작 🐻‍❄️</title>
+    <title>김유진 | 웹 프론트엔드 포트폴리오</title>
+    <link rel="icon-1" href="">
 </head>
 <body>
-    <center><hr><h1>🐻‍❄️ 웹사이트 제작 실습 🐻‍❄️</h1><hr></center>
-    <img src="https://cdn.redpp.co.kr/news/photo/202103/697_3208_2937.jpg" alt="귀여운 북극곰" width="450px" height="520px">
-    <table>
-        <tr><td>웹사이트 제작</td></tr>
-        <tr><td>공부해보자</td></tr>
-    </table>
-    <script src="test01.js"></script>
+    
 </body>
 </html>
