--- a/포트폴리오제작/Myhomepage.html
+++ b/포트폴리오제작/Myhomepage.html
@@ -35,6 +35,81 @@
         <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    
+    <div class="wrap" id="wrap">
+        <header>
+            <a href="#" class="logo">
+                <img src="Images/KakaoTalk_20220528_193320960.jpg" alt="logo">
+            </a>
+        </header>
+        <nav>
+            <ul>
+                <li>
+                    <a data-anchor="info" href="javascript:;"><span>INTRO</span></a>
+                </li>
+                <li>
+                    <a data-anchor="about" href="javascript:;">ABOUT</a>
+                </li>
+                <li>
+                    <a data-anchor="skill" href="javascript:;">SKILL</a>
+                </li>
+                <li>
+                    <a data-anchor="portfolio" href="javascript:;">PORTFOLIO</a>
+                </li>
+                <li>
+                    <a data-anchor="epliogue" href="javascript:;">EPILOGUE</a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <section id="intro">
+                <div class="dozer intro">
+                    <img class="dozer_wheel front" src="images/dozer_wheel.svg" alt="dozer_wheel">
+                    <img class="dozer_wheel back" src="images/dozer_wheel.svg" alt="dozer_wheel">
+                    <img class="dozer_body" src="https://i.pinimg.com/564x/93/a9/89/93a9890cc5076fc8b14039cf60f93730.jpg" alt="dozer_body">
+                    <img class="dozer_shovel" src="https://i.pinimg.com/564x/93/a9/89/93a9890cc5076fc8b14039cf60f93730.jpg" alt="dozer_shovel">
+                </div>
+                <div class="intro_ment">
+                    <span>💥 반갑습니다 💥</span>
+                    <b>끊임없이 꿈꾸고 <em>노력하는</em></b>
+                    <span>김유진입니다.</span>
+                </div>
+                <div class="scroll_txt">SCROLL DOWN</div>
+                <div class="scorll_txt">
+                </div>
+            </section>
+            <section id="about">
+                <div class="inner">
+                    <h1>"김유진"은 어떤사람인가요?</h1>
+                    <div class="about_conten_grid">
+                        <div class="about_section" data-aos="fade-up" data-aos-duration="1000">
+                            <span>
+                                <p>프론트엔드 개발자로 꿈꾸는 김유진입니다.</p>
+                                <p>일상생활 속 자주 사용되는 웹페이지를 제작하여 누구나 사용하기 편리하며, 사용자를 우선하여 제작하는 웹을 보고 감명깊게 느꼈으며, 사용자의 편의를 통한 저만의 개성있는 웹페이지를 제작하고 싶습니다.</p>
+                                <p>심플하면서 개성있고, 직관적으로 표현되는 걸 좋아한답니다.!</p>
+                            </span>
+                            <a class="resume_btn btn" href="https://github.com/youjin0411">깃허브</a>
+                        </div>
+                        <div class="profile" data-aos="fade-up" data-aos-duration="1000">
+                            <img src="images/KakaoTalk_20220601_204959836.jpg" alt="프로필이미지">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="skill">
+                <div class="inner">
+                    <h1>저의 기술skill을 소개드려요</h1>
+                    <span class="lead_ment_skill">*이미지를 호버해주세요!</span>
+                    <div class="skill_sec01" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="Images/HTML5_logo.png" alt="HTML5_logo">
+                        <span class="tooltip">
+                            <p>웹 표준과 웹 접근성을 준수하는<br>
+                            HTML 구조설계로 시맨틱 태그를 사용하여 마크업을 작성합니다.<br>
+                        기획서와 가이드라인을 만들고 체계적인 퍼블리싱 작업을 수행합니다.</p>
+                        </span>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
