--- a/포트폴리오제작/Myhomepage.html
+++ b/포트폴리오제작/Myhomepage.html
@@ -65,8 +65,8 @@
                 <div class="dozer intro">
                     <img class="dozer_wheel front" src="images/dozer_wheel.svg" alt="dozer_wheel">
                     <img class="dozer_wheel back" src="images/dozer_wheel.svg" alt="dozer_wheel">
-                    <img class="dozer_body" src="https://i.pinimg.com/564x/93/a9/89/93a9890cc5076fc8b14039cf60f93730.jpg" alt="dozer_body">
-                    <img class="dozer_shovel" src="https://i.pinimg.com/564x/93/a9/89/93a9890cc5076fc8b14039cf60f93730.jpg" alt="dozer_shovel">
+                    <img class="dozer_body" src="Images/시작화면.png" alt="dozer_body">
+                    
                 </div>
                 <div class="intro_ment">
                     <span>💥 반갑습니다 💥</span>
@@ -107,9 +107,220 @@
                         기획서와 가이드라인을 만들고 체계적인 퍼블리싱 작업을 수행합니다.</p>
                         </span>
                     </div>
+                    <div class="skill_sec02" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="images/css3_logo.png" alt="css3_logo">
+                        <span class="tooltip">
+                            <p>
+                                크로스브라우징에 대해IE 지원을 고려하며 CSS3의 구조와 속성을 이해하고, 원하는 스타일로 코드 구현이 가능합니다.<br>
+                                CSS3에서 새롭게 지원하는 속성을 활용해서 다양한 CSS배치와 디자인을 합니다.
+                            </p>
+                        </span>
+                    </div>
+                    <div class="skill_sec03" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="images/js_logo.png" alt="js_logo">
+                        <span class="tooltip">
+                            <p>
+                                필수적인 자바스크립트 활용이 가능하며 주로 제이쿼리와 병행해서 활용합니다. 대체적인 자바스크립트를 읽을 줄 압니다.
+                            </p>
+                        </span>
+                    </div>
+                    <div class="skill_sec06" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="images/visual_studio_logo.png" alt="visual_studio_logo">
+                        <span class="tooltip">
+                            <p>
+                                Visual Studio Code를 메인으로 사용하며, 경우에 따라 NotePad++ 또는 EditPlus, Atom, Subline Text도 활용
+                                가능합니다.
+                            </p>
+                        </span>
+                    </div>
+                    <div class="skill_sec07" data-aos="fade-up" data-aos-duration="1500">
+                        <img src="images/photoshop_logo.png" alt="photoshop_logo">
+                        <img src="images/illustrator_logo.png" alt="illustrator_logo">
+                        <span class="tooltip">
+                            <p>
+                                포토샵과 일러스트를 능숙하게 이용하여 시안을 제작할 수 있습니다.<br>
+                                이벤트 디자인, 배너 디자인 등을 위한 두 프로그램을 동시 사용하는 것에 능숙합니다.
+                            </p>
+                        </span>
+                    </div>
+                    <div class="skill_txt">
+                        <span data-aos="fade-down" data-aos-duration="1800">코딩은 기본소양!</span>
+                        <span data-aos="fade-down" data-aos-duration="1800">유저를 생각해서
+                            만들어요</span>
+                        <span data-aos="fade-down" data-aos-duration="1800">디자인도 가능한
+                            센스쟁이</span>
+                    </div>
+                    <div class="line">
+                        <div class="line01" data-aos="fade-down" data-aos-duration="2000"></div>
+                        <div class="line02" data-aos="fade-down" data-aos-duration="2000"></div>
+                        <div class="line03" data-aos="fade-down" data-aos-duration="2000"></div>
+                        <div class="line04" data-aos="fade-down" data-aos-duration="2000"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div id="portfolio">
+            <section>
+                <h1>제 작업을 구경하세요!</h1>
+                <span class="lead_ment pp01"></span>
+                <div data-aos="fade-up" data-aos-duration="1000" class="slide_group">
+                    <div class="slide01">
+                        <span class="thumbnail01 grid">
+                        </span>
+                        <div class="pf_btn_list flex">
+                            <a href="#none" class="pf_btn btn planning plan01">PLANNING</a>
+                            <a href="https://youjin0411.github.io/wedPracticd/project01.html" target=”_blank”
+                                class="pf_btn btn pc01">PC</a>
+                        </div>
+                    </div>
+                    <div class="slide02">
+                        <span class="thumbnail02 grid">
+                        </span>
+                        <div class="pf_btn_list flex">
+                            <a href="#none" class="pf_btn btn planning plan02">PLANNING</a>
+                            <a href="https://youjin0411.github.io/wedPracticd/project01.html" target=”_blank”
+                                class="pf_btn btn pc02">PC</a>
+                            <!-- <a href="#none" class="pf_btn mobile_btn mobile02">MOBILE</a> -->
+                        </div>
+                    </div>
+                    <div class="slide03">
+                        <span class="thumbnail03 grid">
+                        </span>
+                        <div class="pf_btn_list flex">
+                            <a href="#none" class="pf_btn btn planning plan03">PLANNING</a>
+                            <a href="#none" class="pf_btn btn pc03">PC</a>
+                            <a href="#none" class="pf_btn mobile_btn mobile03">MOBILE</a>
+                        </div>
+                    </div>
+                    <div class="slide04">
+                        <span class="thumbnail04 grid">
+                        </span>
+                        <div class="pf_btn_list flex">
+                            <a href="#none" class="pf_btn btn planning plan04">PLANNING</a>
+                            <a href="https://youjin0411.github.io/wedPracticd/project01.html" target=”_blank”
+                                class="pf_btn btn pc04">PC</a>
+                            <a href="#none" class="pf_btn btn mobile_btn mobile04">MOBILE</a>
+                        </div>
+                    </div>
+                    <div class="slide05">
+                        <span class="thumbnail05 grid">
+                        </span>
+                        <div class="pf_btn_list flex">
+                            <a href="#none" class="pf_btn btn planning plan05">PLANNING</a>
+                            <a href="#none" class="pf_btn btn pc05">PC</a>
+                            <a href="#none" class="pf_btn btn mobile_btn mobile05">MOBILE</a>
+                        </div>
+                    </div>
                 </div>
             </section>
-        </main>
+            <section>
+                <h1>디자인도 한답니다</h1>
+                <span class="lead_ment pp02"></span>
+                <div data-aos="fade-up" data-aos-duration="400" class="slide_group">
+                    <div class="slide06">
+                        <span class="thumbnail06 grid">
+                        </span>
+                        <a href="#none" class="pf_btn btn see_btn goToSee01">GO TO SEE</a>
+                    </div>
+                    <div class="slide07">
+                        <span class="thumbnail07 grid">
+                        </span>
+                        <a href="#none" class="pf_btn btn see_btn goToSee02">GO TO SEE</a>
+                    </div>
+                    <div class="slide08">
+                        <span class="thumbnail08 grid">
+                        </span>
+                        <a href="#none" class="pf_btn btn see_btn goToSee03">GO TO SEE</a>
+                    </div>
+                    <div class="slide09">
+                        <span class="thumbnail09 grid">
+                        </span>
+                        <a href="#none" class="pf_btn btn see_btn goToSee04">GO TO SEE</a>
+                    </div>
+                    <div class="slide010">
+                        <span class="thumbnail010 grid">
+                        </span>
+                        <a href="#none" class="pf_btn btn see_btn goToSee05">GO TO SEE</a>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div id="epilogue">
+            <section class="ep_ment">
+                <p>
+                    불도저는 여러 분야에 필수적인 장비입니다.<br>
+                    불도저가 필요하지 않으신가요?
+                </p>
+                <h1>나누고 싶은 이야기가 있으시다면</h1>
+            </section>
+            <div class="contect grid">
+                <div class="dozer outro">
+                    <img class="dozer_body" src="images/시작화면.png" alt="">
+                    <img class="dozer_shovel" src="images/시작화면.png" alt="">
+                </div>
+                <button class="email" onclick="copy('#emailadress')" data-aos-duration="1000" data-aos="flip-up"
+                    data-aos-delay="300">
+                    <div class="email_popup">
+                        COPIED EMAIL!
+                    </div>
+                    <b id="emailadress">w2117@e-mirim.hs.kr</b>
+                </button>
+                <p data-aos-duration="300" data-aos="flip-up" data-aos-delay="900">메일을
+                    보내주시면 평일 기준 <em>3일 내</em>로 답장을 드릴게요.</p>
+            </div>
+            <footer>
+                <div class="inner grid">
+                    <a href="https://github.com/youjin0411" target="_blank">GitHub</a>
+                    <span>ⓒ 2022 zinepeep</span>
+                    <a href="https://velog.io/@youjin0411" target="_blank">Velog</a>
+                </div>
+            </footer>
+        </div>
+    </main>
+</div>
+<!-- WEBDESIGN-PLAN MODAL -->
+<div class="modal webdesign_modal webdesign-p_modal">
+    <div class="modal_inner webdesign-p_modal_inner">
+        <iframe class="webdesign_modal_iframe webdesign-p_modal_iframe" src=""></iframe>
+        <div class="webdesign_modal_close"></div>
     </div>
+</div>
+<!-- WEBDESIGN-MOBILE MODAL -->
+<div class="modal webdesign_modal webdesign-m_modal">
+    <div class="modal_inner webdesign-m_modal_inner">
+        <iframe class="webdesign_modal_iframe webdesign-m_modal_iframe" src=""></iframe>
+        <img src="images/iphone12.png" alt="iphone12">
+        <span class="webdesign-m_modal_time" id="webdesign-m_modal_time"></span>
+        <div class="webdesign-m_modal_url"></div>
+        <div class="webdesign_modal_close"></div>
+    </div>
+</div>
+<!-- GO TO SEE MODAL -->
+<div class="webdesign_modal modal see_modal">
+    <div class="modal_inner see_modal_inner">
+        <iframe class="webdesign_modal_iframe see_modal_iframe" src=""></iframe>
+        <img src="images/ipadpro.png" alt="ipadpro">
+        <div class="webdesign_modal_close"></div>
+    </div>
+</div>
+<!-- ALERT MODAL -->
+<div class="modal alert_modal">
+    <div class="modal_inner alert_modal_inner flex">
+        <p class="alert_modal_txt"></p>
+        <div class="alert_modal_close flex">OK</div>
+    </div>
+</div>
+<script src="js/jquery-3.6.0.min.js"></script>
+<!-- AOS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    console.log(
+        "%c HELLO WORLD! I'M JIN-DOZER!! ",
+        "background-color:#FFCC00; color: #112152; font-weight:bold; font-size:120%; padding: 4px;");
+</script>
+<!-- SLICK -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
+<script src="js/custom.js"></script>
 </body>
+
 </html>
