--- a/포트폴리오제작/Myhomepage.html
+++ b/포트폴리오제작/Myhomepage.html
@@ -197,7 +197,7 @@
                         </span>
                         <div class="pf_btn_list flex">
                             <a href="#none" class="pf_btn btn planning plan04">PLANNING</a>
-                            <a href="https://youjin0411.github.io/wedPracticd/project01.html" target=”_blank”
+                            <a href="portfolio/website_work/04/index.html" target=”_blank”
                                 class="pf_btn btn pc04">PC</a>
                             <a href="#none" class="pf_btn btn mobile_btn mobile04">MOBILE</a>
                         </div>
@@ -255,24 +255,24 @@
             </section>
             <div class="contect grid">
                 <div class="dozer outro">
-                    <img class="dozer_body" src="images/시작화면.png" alt="">
-                    <img class="dozer_shovel" src="images/시작화면.png" alt="">
+                    <img class="dozer_body" src="images/dozer_body.svg" alt="">
+                    <img class="dozer_shovel" src="images/dozer_shovel.svg" alt="">
                 </div>
                 <button class="email" onclick="copy('#emailadress')" data-aos-duration="1000" data-aos="flip-up"
                     data-aos-delay="300">
                     <div class="email_popup">
                         COPIED EMAIL!
                     </div>
-                    <b id="emailadress">w2117@e-mirim.hs.kr</b>
+                    <b id="emailadress">zinepeep@naver.com</b>
                 </button>
                 <p data-aos-duration="300" data-aos="flip-up" data-aos-delay="900">메일을
                     보내주시면 평일 기준 <em>3일 내</em>로 답장을 드릴게요.</p>
             </div>
             <footer>
                 <div class="inner grid">
-                    <a href="https://github.com/youjin0411" target="_blank">GitHub</a>
+                    <a href="https://github.com/zinepeep" target="_blank">GitHub</a>
                     <span>ⓒ 2022 zinepeep</span>
-                    <a href="https://velog.io/@youjin0411" target="_blank">Velog</a>
+                    <a href="https://blog.naver.com/zinepeep" target="_blank">Blog</a>
                 </div>
             </footer>
         </div>
