--- a/project/project01.html
+++ b/project/project01.html
@@ -57,7 +57,7 @@
     <div id="navigation"><h2>Language & Study</h2></div>
     <h3>Language</h3>
     <div id="color">
-    <p>🔹html5 🔹css3 🔹javascript 🔹java 🔹c 🔹java 🔹kotlin</p>
+    <p>🔹html5 🔹css3 🔹javascript 🔹java 🔹c 🔹java 🔹kotlin 🔹python </p>
     </div>
     <h3>Study</h3>
     <p>모던 웹을 위한 HTML5 + CSS3 바이블 3판 공부 </p>
